--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ NPZ = "15e1cf62-19b3-5cfa-8e77-841668bca605"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 
 [compat]
+Plots = "1"
 julia = "1"
 
 [extras]
