--- a/Project.toml
+++ b/Project.toml
@@ -10,10 +10,13 @@ Debugger = "31a5f54b-26ea-5ae9-a837-f05ce5417438"
 DynamicalSystems = "61744808-ddfa-5f27-97ff-6e42cc95d634"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NPZ = "15e1cf62-19b3-5cfa-8e77-841668bca605"
+PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+YAActL = "4c422213-1242-4325-9ff2-ab065d5354a7"
 
 [compat]
 julia = "1"
