--- a/Project.toml
+++ b/Project.toml
@@ -8,7 +8,10 @@ BPTT = "84beb053-a066-4ae9-8af9-707f5e1c390b"
 BSON = "fbb218c0-5317-5bc6-957e-2ee96dd4b1f0"
 Debugger = "31a5f54b-26ea-5ae9-a837-f05ce5417438"
 DynamicalSystems = "61744808-ddfa-5f27-97ff-6e42cc95d634"
+FLoops = "cc61a311-1640-44b5-9fba-1b764f453329"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
+FoldsThreads = "9c68100b-dfe1-47cf-94c8-95104e173443"
+GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
