--- a/Project.toml
+++ b/Project.toml
@@ -22,6 +22,7 @@ SplitApplyCombine = "03a91e81-4c3e-53e1-a0a4-9c0c8f19dd66"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
+SplitApplyCombine = "1"
 julia = "1"
 
 [extras]
